# PatchMatchStereoSAD

./: .gitignore  CMakeLists.txt  README.md  disp_to_coud.py  main.cpp  openmp_test.cpp  pfm_util.py  pm.cpp  pm.h  tiff_to_pfm_and_coud.py
Speckle_Data/data150F/: calib.txt  disp0PM3SAD11MF7.pfm
Speckle_Data/data150F/PM3SAD11MF7/: left_disparity.tiff  right_disparity.tiff
Speckle_Data/data75F/: disp0SGM.pfm
Speckle_Data/data75F/PM3SAD11MF7/: disp0PM3SAD11MF7.pfm  left_disparity.tiff  right_disparity.tiff
imgs/MiddEval3/: disp0PM3SAD11MF7.pfm
imgs/MiddEval3/PM3SAD11MF7/: right_disparity.pfm
imgs/Speckle/BL150/: disp0SGM.pfm  disp0SGM.ply
imgs/Speckle/BL150/gdqn/: camrea_intrin.txt  disp0PM3SAD11MF7.pfm  disp0PM3SAD11MF7.ply  disp0SGM.pfm
imgs/Speckle/BL150/gdqn/PM3SAD11MF7/: left_disparity.pfm  right_disparity.pfm
imgs/Speckle/BL150/qinnv/PM3SAD11MF7/: disp0PM3SAD11MF7.pfm  left_disparity.pfm  right_disparity.pfm
imgs/Speckle/BL75/PM3SAD11MF7/: left_disparity.pfm
imgs/Speckle/BL75/qinnv/: calib.txt  camrea_intrin.txt  disp0PM3SAD11MF7.pfm
imgs/Speckle/BL75/qinnv/PM3SAD11MF7/: right_disparity.pfm
